Adds more advanced Solution Graphing

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -343,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "377e2646440a43fc9ddfdfad4ca5bfe5",
+       "model_id": "81dacfc6d6a44cdba92edf4d3a0c334c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8be764b45a9a4c4abb8279a35f1a1277",
+       "model_id": "017ed2f8b1ab4f0783bbd22d4f83815f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,13 +445,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Function Called!\n",
+      "Graph Function Called!\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "926ae3e453a44d1db62dc92af96c00f9",
+       "model_id": "3e7d97cc7bb1478eb11ab89accbdb753",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,9 +473,35 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb0b2ed51d0e4ede823c6dbdeebcf8af",
+       "model_id": "6eb0ba5813664665ac0a67e5de6ccc92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -501,10 +535,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a95a45cd9470437c927f89943530fd8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Solving the Schrodinger Equation for the Harmonic Oscillator \n",
+    "#Based on equations from the following references: \n",
+    "#    https://phys.libretexts.org/Bookshelves/University_Physics/Book%3A_University_Physics_(OpenStax)/Map%3A_University_Physics_III_-_Optics_and_Modern_Physics_(OpenStax)/07%3A_Quantum_Mechanics/7.06%3A_The_Quantum_Harmonic_Oscillator#:~:text=Unlike%20a%20classical%20oscillator%2C%20the,%3D%E2%84%8F%CF%89%3Dhf.\n",
+    "#    http://hyperphysics.phy-astr.gsu.edu/hbase/quantum/hosc.html#c1\n",
+    "from operators import *\n",
+    "from basisSet import *\n",
+    "from nistScraper import *\n",
+    "from schrodinger import *\n",
+    "from graphable import *\n",
+    "\n",
+    "dc = getDiatomicConstants(\"H2\")\n",
+    "dc[\"re\"] = 0\n",
+    "\n",
+    "basis = basisSet(dc, size=20)\n",
+    "\n",
+    "class howPES(Graphable):\n",
+    "    \n",
+    "    #Set up graphing variables here\n",
+    "    graphTitle = \"Harmonic Oscilator PES\"\n",
+    "    xTitle = \"r in Å\"\n",
+    "    yTitle = \"Wavenumbers\"\n",
+    "    \n",
+    "    #Declare global variables\n",
+    "    re = 0 \n",
+    "    k = 1\n",
+    "    \n",
+    "    def __init__(self, dc):\n",
+    "        \n",
+    "        #Conversions to be made\n",
+    "        #1/cm to 1/s\n",
+    "        #AMU to Kg\n",
+    "        #Angstroms to meters\n",
+    "        self.k = 2 * jToWavenumbers * dc[\"u\"] * amuToKg * pow(dc[\"w\"] * 100 * c * pi, 2) \n",
+    "        self.re = dc[\"re\"] / mToA\n",
+    "        \n",
+    "        self.start = dc[\"re\"] - .8\n",
+    "        self.end = dc[\"re\"] + .8\n",
+    "            \n",
+    "    def value(self, r):\n",
+    "        return  self.k * pow( (r / mToA) - self.re,2) \n",
+    "    \n",
+    "pes = howPES(dc)\n",
+    "\n",
+    "T = TOperator(basis, integrationStart = -inf)\n",
+    "V = VOperator(basis, pes, integrationStart = -inf)\n",
+    "\n",
+    "H = T + V\n",
+    "solution = schrod(H, basis, pes)\n",
+    "solution.graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "solution = schrod(H, basis, pes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n",
+      "Graph Function Called!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86e888f72c884208b4a2d250c24ac7d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "solution.graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Function Called!\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "getWidgets() takes 1 positional argument but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-6e0c527633a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolution\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetWaveFunctions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\graphable.py\u001b[0m in \u001b[0;36mgraph\u001b[1;34m(self, showGraph, resolution, start, end, precision, startBoundary, endBoundary)\u001b[0m\n\u001b[0;32m     91\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mtrace\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuildGraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;31m###################################################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\graphable.py\u001b[0m in \u001b[0;36mbuildGraph\u001b[1;34m(self, trace)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwidgetData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 113\u001b[1;33m         \u001b[0mparentWidgets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetWidgets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidgetData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    114\u001b[0m         \u001b[1;31m#if(parentWidgets != False):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m             \u001b[1;31m#widgets.append(parentWidgets)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: getWidgets() takes 1 positional argument but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "solution.getWaveFunctions()[0].graph()"
+   ]
   }
  ],
  "metadata": {
