--- a/RKR/RKR-Copy1.ipynb
+++ b/RKR/RKR-Copy1.ipynb
@@ -187,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17384253f2ff4d1ebadef6bf0b181a78",
+       "model_id": "27e0e3ed09cd432da24be7fa1bca7f82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f27f79ea7ae4b41a0755bf024bbdfc4",
+       "model_id": "48adc17653554a4e9f0c13d14d22126c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,13 +303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66064076d52f46968e49ea67276340ae",
+       "model_id": "e623d3dccd7e480688dd980e8731d46f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,14 +330,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "515492d150b1482e93d5df62c197247c",
+       "model_id": "c8cad7b205da448097cd5378a9ecfb18",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FigureWidget({\n",
+       "VBox(children=(FigureWidget({\n",
        "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate': '<b>r in Ang…"
+       "              'hovertemplate…"
       ]
      },
      "metadata": {},
