--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b569c889242438597e52113374d32b9",
+       "model_id": "6d4ac416688841e5bfbe30cc7b9a8390",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "783601feeaec4522b24548575595b9a4",
+       "model_id": "1e773e1d2f094409b063700cd83d8900",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a6b93c05484905beef6d60e89ec7c3",
+       "model_id": "4830471a1a2d4215b7343c4ecd530d43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +239,10 @@
     "print(\"Basis Size: \", len(basis))\n",
     "\n",
     "#Basis Sets are graphable objects \n",
-    "basis.graph()\n"
+    "basis.graph()\n",
+    "\n",
+    "#re = 0\n",
+    "#we can be choosen manually"
    ]
   },
   {
@@ -250,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16fdc19712f941278ad87d0b2b256b7a",
+       "model_id": "70e388747a8749c5a61fe7d86a354075",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35f05918d1324e11921a1bb6d074c38c",
+       "model_id": "ece4efe5da614e2288ac765b043de393",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f12896f9bb444f919af34dc4149765a9",
+       "model_id": "5e4dee8b7c33442ca2813caf33f3143c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  3301.0619476766515\n",
+      "T[1,1]:  3301.061495413046\n",
       "V[0,1]:  -692.5480107266716\n",
       "H[1,1]: -2058.232222008167\n"
      ]
@@ -432,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8fa3ee154fa458397588a64125c167c",
+       "model_id": "8563de30fce84e4f87061895d997d307",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +451,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83e6bfe4101a47008d51a68dc4c2d1b7",
+       "model_id": "b99cfada27574388a6fc9f2ab08d38d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,14 +468,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  2199.1646675587285\n",
+      "wavefunction.value(r):  2199.164570181711\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0ade14fd98649d5b9e1c328cca32cfa",
+       "model_id": "4dd00cdbc44741f9ac397c3cf41635f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,8 +525,18 @@
     "print()\n",
     "\n",
     "#Wavefunctions are graphable objects \n",
-    "wavefunctions[2].graph()"
+    "wavefunctions[2].graph()\n",
+    "\n",
+    "#Add probability\n",
+    "#Add box drawing feature"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
