Updates Schrod Class

--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d4ac416688841e5bfbe30cc7b9a8390",
+       "model_id": "f6c45e3f76df4c3f81a298d5cb070075",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e773e1d2f094409b063700cd83d8900",
+       "model_id": "c9ecbe23e0564d84807204b24562e55c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4830471a1a2d4215b7343c4ecd530d43",
+       "model_id": "ce217f9d0c0047d591d777e2ed7ad9a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70e388747a8749c5a61fe7d86a354075",
+       "model_id": "475d92c75e524fce9bd25947f4288dd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ece4efe5da614e2288ac765b043de393",
+       "model_id": "56b1252e964a46898f55941672a8cce8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4dee8b7c33442ca2813caf33f3143c",
+       "model_id": "914ed3bf1a8c4a2c872371d58c10169e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -435,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8563de30fce84e4f87061895d997d307",
+       "model_id": "cb02fa99381446709eb88853801bf72c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +451,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b99cfada27574388a6fc9f2ab08d38d8",
+       "model_id": "2c331609dfe148a2b3b8f127702928c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dd00cdbc44741f9ac397c3cf41635f3",
+       "model_id": "48acb5b132ca4b6180a0fab6e36e7b96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -525,10 +525,7 @@
     "print()\n",
     "\n",
     "#Wavefunctions are graphable objects \n",
-    "wavefunctions[2].graph()\n",
-    "\n",
-    "#Add probability\n",
-    "#Add box drawing feature"
+    "wavefunctions[2].graph()"
    ]
   },
   {
