--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -343,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81dacfc6d6a44cdba92edf4d3a0c334c",
+       "model_id": "b9744f332d6b44ac8c420bde743cebe5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "017ed2f8b1ab4f0783bbd22d4f83815f",
+       "model_id": "73ae429a2fd84e98af6ca79868e82705",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,17 +449,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph Function Called!\n",
-      "Graph Function Called!\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e7d97cc7bb1478eb11ab89accbdb753",
+       "model_id": "66561a155c9b42e9852aa4fd30b59476",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,35 +465,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb0ba5813664665ac0a67e5de6ccc92",
+       "model_id": "70470e6c00c743b886d7e58fe38b3e72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,33 +508,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n"
+      "0.5\n",
+      "{'name': 'H2', 'state': 'ground', 'T': 0.0, 'w': 4401.21, 'wx': 121.33, 'wy': 0, 'wz': 0, 'B': 60.853, 'a': 3.062, 'y': 0, 'D': 0.0471, 're': 0, 'u': 0.503912516115}\n",
+      "4000.0\n",
+      "0.5\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a95a45cd9470437c927f89943530fd8d",
+       "model_id": "2c3317d89d504ab3be728ce982859a36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -576,6 +525,20 @@
        "VBox(children=(FigureWidget({\n",
        "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
        "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c38f349695fe4c018b0fc0e02dc8da14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatText(value=0.5, description='<p style=\"font-family:verdana;font-size:15px\">AMU</p>'), Floa…"
       ]
      },
      "metadata": {},
@@ -596,8 +559,7 @@
     "dc = getDiatomicConstants(\"H2\")\n",
     "dc[\"re\"] = 0\n",
     "\n",
-    "basis = basisSet(dc, size=20)\n",
-    "\n",
+    "basis = basisSet(dc, size=15)\n",
     "class howPES(Graphable):\n",
     "    \n",
     "    #Set up graphing variables here\n",
@@ -623,108 +585,85 @@
     "            \n",
     "    def value(self, r):\n",
     "        return  self.k * pow( (r / mToA) - self.re,2) \n",
+    "\n",
+    "mass = widgets.FloatText(\n",
+    "    min = pow(10, -8),\n",
+    "    value = 0.5,\n",
+    "    description = '<p style=\"font-family:verdana;font-size:15px\">AMU</p>'\n",
+    ")\n",
+    "\n",
+    "print(mass.value)\n",
+    "w = widgets.FloatText(\n",
+    "    min = pow(10, -8),\n",
+    "    value = 4000,\n",
+    "    step = 100, \n",
+    "    description = '<p style=\"font-family:verdana;font-size:15px\">ω in 1/cm</p>'\n",
+    ")\n",
+    "\n",
+    "graph = widgets.VBox([])\n",
+    "def buildSolution(graph):\n",
     "    \n",
-    "pes = howPES(dc)\n",
+    "    print(dc)\n",
+    "    print(w.value)\n",
+    "    print(mass.value)\n",
+    "    dc[\"w\"] = 4000#w.value\n",
+    "    dc[\"u\"] = 0.5#mass.value\n",
+    "    \n",
+    "    pes = howPES(dc)\n",
     "\n",
-    "T = TOperator(basis, integrationStart = -inf)\n",
-    "V = VOperator(basis, pes, integrationStart = -inf)\n",
+    "    T = TOperator(basis, integrationStart = -inf)\n",
+    "    V = VOperator(basis, pes, integrationStart = -inf)\n",
     "\n",
-    "H = T + V\n",
-    "solution = schrod(H, basis, pes)\n",
-    "solution.graph()"
+    "    H = T + V\n",
+    "    solution = schrod(H, basis, pes)\n",
+    "    \n",
+    "    graph.children = solution.graph(getGraph=True).children\n",
+    "\n",
+    "\n",
+    "buildSolution(graph)\n",
+    "\n",
+    "observeFunction = lambda value : buildSolution(graph)\n",
+    "mass.observe(buildSolution)\n",
+    "w.observe(buildSolution)\n",
+    "\n",
+    "display(graph)\n",
+    "display(widgets.HBox([mass, w]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "solution = schrod(H, basis, pes)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n",
-      "Graph Function Called!\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86e888f72c884208b4a2d250c24ac7d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "solution.graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph Function Called!\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "getWidgets() takes 1 positional argument but 3 were given",
+     "ename": "NameError",
+     "evalue": "name 'V' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-6e0c527633a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolution\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetWaveFunctions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\graphable.py\u001b[0m in \u001b[0;36mgraph\u001b[1;34m(self, showGraph, resolution, start, end, precision, startBoundary, endBoundary)\u001b[0m\n\u001b[0;32m     91\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mtrace\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuildGraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;31m###################################################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mA:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Comp_Chem_Package\\graphable.py\u001b[0m in \u001b[0;36mbuildGraph\u001b[1;34m(self, trace)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwidgetData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 113\u001b[1;33m         \u001b[0mparentWidgets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetWidgets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidgetData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    114\u001b[0m         \u001b[1;31m#if(parentWidgets != False):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m             \u001b[1;31m#widgets.append(parentWidgets)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: getWidgets() takes 1 positional argument but 3 were given"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-eaa185db0265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'V' is not defined"
      ]
     }
    ],
    "source": [
-    "solution.getWaveFunctions()[0].graph()"
+    "print(V)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
