Fixes non-updating basis set in HOW Notebook

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -58,6 +58,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -343,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9744f332d6b44ac8c420bde743cebe5",
+       "model_id": "b325726f2379420f88e525393bbd6b96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73ae429a2fd84e98af6ca79868e82705",
+       "model_id": "e7780bacd3cc4fcc80c5b1fe3ab85067",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66561a155c9b42e9852aa4fd30b59476",
+       "model_id": "d82ee66af93c4e93a64517db40764779",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,7 +474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70470e6c00c743b886d7e58fe38b3e72",
+       "model_id": "3dce5ac8b744417393332e0ea90ee31f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,16 +515,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5\n",
-      "{'name': 'H2', 'state': 'ground', 'T': 0.0, 'w': 4401.21, 'wx': 121.33, 'wy': 0, 'wz': 0, 'B': 60.853, 'a': 3.062, 'y': 0, 'D': 0.0471, 're': 0, 'u': 0.503912516115}\n",
-      "4000.0\n",
-      "0.5\n"
+      "[[0.49997649 0.         0.70707354 0.        ]\n",
+      " [0.         1.49992948 0.         1.22468729]\n",
+      " [0.70707354 0.         2.49988247 0.        ]\n",
+      " [0.         1.22468729 0.         3.49983546]]\n",
+      "[[ 0.50002321  0.         -0.70713934  0.        ]\n",
+      " [ 0.          1.50006926  0.         -1.22480066]\n",
+      " [-0.70713934  0.          2.50011456  0.        ]\n",
+      " [ 0.         -1.22480066  0.          3.50015913]]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c3317d89d504ab3be728ce982859a36",
+       "model_id": "861466cc8ffd4b9b9dcb1a6fc8701742",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,12 +544,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c38f349695fe4c018b0fc0e02dc8da14",
+       "model_id": "c7633b84f85d454d8558f80c6343bff8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatText(value=0.5, description='<p style=\"font-family:verdana;font-size:15px\">AMU</p>'), Floa…"
+       "HBox(children=(FloatText(value=0.5, description='<p style=\"font-family:verdana;font-size:15px\">AMU</p>', step=…"
       ]
      },
      "metadata": {},
@@ -552,16 +563,33 @@
     "#    http://hyperphysics.phy-astr.gsu.edu/hbase/quantum/hosc.html#c1\n",
     "from operators import *\n",
     "from basisSet import *\n",
-    "from nistScraper import *\n",
+    "from diatomicConstants import *\n",
     "from schrodinger import *\n",
     "from graphable import *\n",
+    "from nistScraper import *\n",
     "\n",
-    "dc = getDiatomicConstants(\"H2\")\n",
-    "dc[\"re\"] = 0\n",
     "\n",
-    "basis = basisSet(dc, size=15)\n",
+    "#Declare all variables here\n",
+    "graph = widgets.VBox([])\n",
+    "\n",
+    "#Declare widgets\n",
+    "mass = widgets.FloatText(\n",
+    "    min = pow(10, -8),\n",
+    "    value = 0.5,\n",
+    "    step = .1, \n",
+    "    description = '<p style=\"font-family:verdana;font-size:15px\">AMU</p>'\n",
+    ")\n",
+    "w = widgets.FloatText(\n",
+    "    min = pow(10, -8),\n",
+    "    value = 2,\n",
+    "    step = 100, \n",
+    "    description = '<p style=\"font-family:verdana;font-size:15px\">ω in 1/cm</p>'\n",
+    ")\n",
+    "\n",
+    "dc = buildDiatomicConstants(w=w.value, u=mass.value)\n",
+    "basis = basisSet(dc, size=4)\n",
+    "\n",
     "class howPES(Graphable):\n",
-    "    \n",
     "    #Set up graphing variables here\n",
     "    graphTitle = \"Harmonic Oscilator PES\"\n",
     "    xTitle = \"r in Å\"\n",
@@ -580,35 +608,19 @@
     "        self.k = 2 * jToWavenumbers * dc[\"u\"] * amuToKg * pow(dc[\"w\"] * 100 * c * pi, 2) \n",
     "        self.re = dc[\"re\"] / mToA\n",
     "        \n",
-    "        self.start = dc[\"re\"] - .8\n",
-    "        self.end = dc[\"re\"] + .8\n",
+    "        delta = (sqrt(dc[\"w\"] * 800 * c * hbar * jToWavenumbers * basis.size / self.k) + self.re) * mToA\n",
+    "        self.start = dc[\"re\"] - delta\n",
+    "        self.end = dc[\"re\"] + delta\n",
     "            \n",
     "    def value(self, r):\n",
     "        return  self.k * pow( (r / mToA) - self.re,2) \n",
     "\n",
-    "mass = widgets.FloatText(\n",
-    "    min = pow(10, -8),\n",
-    "    value = 0.5,\n",
-    "    description = '<p style=\"font-family:verdana;font-size:15px\">AMU</p>'\n",
-    ")\n",
-    "\n",
-    "print(mass.value)\n",
-    "w = widgets.FloatText(\n",
-    "    min = pow(10, -8),\n",
-    "    value = 4000,\n",
-    "    step = 100, \n",
-    "    description = '<p style=\"font-family:verdana;font-size:15px\">ω in 1/cm</p>'\n",
-    ")\n",
-    "\n",
-    "graph = widgets.VBox([])\n",
     "def buildSolution(graph):\n",
     "    \n",
-    "    print(dc)\n",
-    "    print(w.value)\n",
-    "    print(mass.value)\n",
-    "    dc[\"w\"] = 4000#w.value\n",
-    "    dc[\"u\"] = 0.5#mass.value\n",
+    "    dc[\"w\"] = w.value\n",
+    "    dc[\"u\"] = mass.value\n",
     "    \n",
+    "    basis = basisSet(dc, size=4)\n",
     "    pes = howPES(dc)\n",
     "\n",
     "    T = TOperator(basis, integrationStart = -inf)\n",
@@ -616,30 +628,45 @@
     "\n",
     "    H = T + V\n",
     "    solution = schrod(H, basis, pes)\n",
-    "    \n",
+    "    print(V)\n",
+    "    print(T)\n",
+    "    #update the graph\n",
     "    graph.children = solution.graph(getGraph=True).children\n",
-    "\n",
-    "\n",
-    "buildSolution(graph)\n",
-    "\n",
+    "    \n",
+    "#Set up widget observation\n",
     "observeFunction = lambda value : buildSolution(graph)\n",
-    "mass.observe(buildSolution)\n",
-    "w.observe(buildSolution)\n",
+    "mass.observe(observeFunction)\n",
+    "w.observe(observeFunction)\n",
     "\n",
+    "#Graph data\n",
+    "buildSolution(graph)\n",
     "display(graph)\n",
     "display(widgets.HBox([mass, w]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.954929550893284"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dc[\"w\"] * 100 * c * hbar * jToWavenumbers * (basis.size-1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -649,13 +676,22 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-eaa185db0265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-eaa185db0265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'V' is not defined"
      ]
     }
    ],
    "source": [
     "print(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getDiatomicConstants(\"CO\")"
    ]
   },
   {
