--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -62,9 +62,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'H2', 'state': 'ground', 'T': 0.0, 'w': 4401.21, 'wx': 121.33, 'wy': 0, 'wz': 0, 'B': 60.853, 'a': 3.062, 'y': 0, 'D': 0.0471, 're': 0.74144, 'u': 0.503912516115}\n",
+      "{'name': 'CO', 'state': 'ground', 'T': 0.0, 'w': 2169.81358, 'wx': 13.28831, 'wy': 0, 'wz': 0, 'B': 1.93128087, 'a': 0.01750441, 'y': 0, 'D': 6.12147e-06, 're': 1.128323, 'u': 6.8562086380025615}\n",
       "\n",
-      "121.33\n"
+      "13.28831\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
     "from nistScraper import getDiatomicConstants\n",
     "\n",
     "#Simply enter the name of the diatomic molecule as a string\n",
-    "dc = getDiatomicConstants(\"H2\")\n",
+    "dc = getDiatomicConstants(\"CO\")\n",
     "\n",
     "#This will display the layout of information in the diatomic constants object \n",
     "print(dc)\n",
@@ -92,16 +92,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basisFunction.value(r):  1.1115426321334092\n",
+      "basisFunction.value(r):  -1.0934777638222464\n",
       "\n",
-      "basisFunction.squaredValue(r):  1.2355270230500675\n",
+      "basisFunction.squaredValue(r):  1.1956936199737005\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6c45e3f76df4c3f81a298d5cb070075",
+       "model_id": "d802ce3af80644028c1ff9d199f5e3bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,11 +147,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basis.value(n, r):  1.3079968679038638\n",
+      "basis.value(n, r):  0.8708245670604646\n",
       "\n",
-      "Basis Function n=0 .value(r):  0.237287193648484\n",
-      "Basis Function n=1 .value(r):  0.7037300313488829\n",
-      "Basis Function n=2 .value(r):  1.3079968679038638\n",
+      "Basis Function n=0 .value(r):  0.09100802389550973\n",
+      "Basis Function n=1 .value(r):  -0.3469319042644413\n",
+      "Basis Function n=2 .value(r):  0.8708245670604646\n",
       "\n",
       "First Basis Function:\n"
      ]
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9ecbe23e0564d84807204b24562e55c",
+       "model_id": "ea52d3bec844420dadd7a74336220d69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce217f9d0c0047d591d777e2ed7ad9a4",
+       "model_id": "4957ee04fbac4fafbe6b14764d5c9b3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,12 +253,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "475d92c75e524fce9bd25947f4288dd0",
+       "model_id": "e48b0e1e2e0848469d73e919412497dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-4400.96734, max=0.0, min=-4400.96734…"
+       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-2169.78700338, max=0.0, min=-2169.78…"
       ]
      },
      "metadata": {},
@@ -268,13 +268,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point from the PES in the form of (r, E): (0.7469995741625354, 4.4010886700000045).\n"
+      "Point from the PES in the form of (r, E): (1.1304593750689604, 2.169800291690002).\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56b1252e964a46898f55941672a8cce8",
+       "model_id": "1c36011df6c841f2b53787ede6d5086a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,13 +322,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  38786.17426489218\n"
+      "fitting.value(r):  86562.33682426663\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "914ed3bf1a8c4a2c872371d58c10169e",
+       "model_id": "b7c189f89d584964b9c06a325286a9c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,9 +384,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  3301.061495413046\n",
-      "V[0,1]:  -692.5480107266716\n",
-      "H[1,1]: -2058.232222008167\n"
+      "T[1,1]:  1612.5523403837517\n",
+      "V[0,1]:  -132.27867559605755\n",
+      "H[1,1]: -375.8114562082976\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb02fa99381446709eb88853801bf72c",
+       "model_id": "716b25e033d5449eb2d731cc752490ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +451,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c331609dfe148a2b3b8f127702928c4",
+       "model_id": "3caaccba5e164096a735b63ea027f91d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,14 +468,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  2199.164570181711\n",
+      "wavefunction.value(r):  1080.5165887963026\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48acb5b132ca4b6180a0fab6e36e7b96",
+       "model_id": "64d17236701444e8b31498cdc84042c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,10 +530,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'CO', 'state': 'ground', 'T': 0.0, 'w': 2169.81358, 'wx': 13.28831, 'wy': 0, 'wz': 0, 'B': 1.93128087, 'a': 0.01750441, 'y': 0, 'D': 6.12147e-06, 're': 1.128323, 'u': 6.8562086380025615}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dc)"
+   ]
   },
   {
    "cell_type": "code",
